[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["joblib.*", "sklearn.*", "lxml.*", "scipy.*", "pandas.*", "neuroquery.*", "nimare.*", "nibabel.*", "nilearn.*"]
ignore_missing_imports = true

[tool.black]
line-length = 79
extend-exclude = '/(_data|data)/'

[tool.isort]
profile = "black"
extend_skip = ["data", "_data"]
skip_gitignore = true
line_length = 79
