[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pubget"
dynamic = ["version"]
description = "Download neuroimaging articles and extract text and stereotactic coordinates."
readme = "README.md"
requires-python = ">=3.10"
license-files = ["COPYING"]
authors = [
    {name = "Jérôme Dockès", email = "jerome@dockes.org"},
    {name = "Alejandro de la Vega", email = "delavega@utexas.edu"}
]
keywords = ["neuroimaging", "meta-analysis", "text-mining"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "joblib (>=1.1.1)",
    "lxml",
    "importlib_metadata (>=3.6)",
    "neuroquery",
    "numpy (>=1.17.3)",
    "pandas (>=1.5.3)",
    "requests",
    "scikit-learn (>=1.2.1)",
    "scipy (>=1.3.2)",
]

[project.urls]
Documentation = "https://neuroquery.github.io/pubget/"
"Source code" = "https://github.com/neuroquery/pubget"

[project.optional-dependencies]
dev = [
    "coverage",
    "flake8",
    "mypy",
    "pdoc",
    "pylint",
    "pytest",
    "pytest-cov",
    "tox",
    "types-requests",
    "black",
    "isort",
]
nimare = [
    "nimare",
]

[tool.hatch.version]
path = "src/pubget/_data/VERSION"
pattern = "^(?P<version>.*)$"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["joblib.*", "sklearn.*", "lxml.*", "scipy.*", "pandas.*", "neuroquery.*", "nimare.*", "nibabel.*", "nilearn.*"]
ignore_missing_imports = true

[tool.black]
line-length = 79
extend-exclude = '/(_data|data)/'

[tool.isort]
profile = "black"
extend_skip = ["data", "_data"]
skip_gitignore = true
line_length = 79

[project.scripts]
pubget = "pubget._commands:pubget_command"