[metadata]
name = nqdc
version = 0.0.1

[options]
packages = find:
package_dir =
    =src
install_requires =
    lxml
    neuroquery
    numpy
    pandas
    requests
    scikit-learn
    scipy
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nqdc_download = nqdc._commands:download_command
    nqdc_extract_articles = nqdc._commands:extract_articles_command
    nqdc_extract_data = nqdc._commands:extract_data_command
    nqdc_vectorize = nqdc._commands:vectorize_command
    nqdc_full_pipeline = nqdc._commands:full_pipeline_command