[metadata]
name = nqdc
description = Download neuroimaging articles and extract text and stereotactic coordinates.
keywords = neuroimaging, meta-analysis, text-mining
url = https://neuroquery.github.io/nqdc/
author = Jérôme Dockès
author_email = jerome@dockes.org
maintainer = Jérôme Dockès
maintainer_email = jerome@dockes.org
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
package_dir =
    =src
install_requires =
    lxml
    neuroquery
    numpy
    pandas
    requests
    scikit-learn
    scipy
python_requires = >=3.7

[options.extras_require]
dev =
    coverage
    flake8
    mypy
    pdoc
    pytest
    pytest-cov
    tox
    types-requests
nimare =
    nimare

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nqdc_download = nqdc._commands:download_command
    nqdc_extract_articles = nqdc._commands:extract_articles_command
    nqdc_extract_data = nqdc._commands:extract_data_command
    nqdc_vectorize = nqdc._commands:vectorize_command
    nqdc_full_pipeline = nqdc._commands:full_pipeline_command