[metadata]
name = nqdc
description = Download neuroimaging articles and extract text and stereotactic coordinates.
long_description = file: README.md, whats_new.md, COPYING
long_description_content_type = text/markdown
keywords = neuroimaging, meta-analysis, text-mining
url = https://neuroquery.github.io/nqdc/
author = Jérôme Dockès
author_email = jerome@dockes.org
maintainer = Jérôme Dockès
maintainer_email = jerome@dockes.org
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
package_dir =
    =src
install_requires =
    joblib>=0.17
    lxml
    importlib_metadata>=3.6
    neuroquery
    numpy>=1.16
    pandas>=0.24
    requests
    scikit-learn>=0.21
    scipy
python_requires = >=3.7

[options.extras_require]
dev =
    coverage
    flake8
    mypy
    pdoc
    pylint
    pytest
    pytest-cov
    tox
    types-requests
    black
    isort
nimare =
    nimare

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nqdc = nqdc._commands:nqdc_command
