[metadata]
name = nqdc_example_plugin

[options]
packages = find:
package_dir =
    =src
install_requires =
    pandas
    matplotlib
python_requires = >=3.7

[options.extras_require]
dev =
    pytest

[options.packages.find]
where = src

[options.entry_points]
nqdc.plugin_processing_steps =
    get_nqdc_processing_steps = nqdc_example_plugin:get_nqdc_processing_steps