[metadata]
name = pubget_example_plugin

[options]
packages = find:
package_dir =
    =src
install_requires =
    pandas
    matplotlib
    pubget
python_requires = >=3.7

[options.extras_require]
dev =
    pytest

[options.packages.find]
where = src

[options.entry_points]
pubget.plugin_actions =
    get_pubget_actions = pubget_example_plugin:get_pubget_actions